unpackaged/main/default/objects/pse__Skill__c/fields/pse__External_Id__c.field-meta.xml
<CustomField>
    <fullName>pse__External_Id__c</fullName>
    <description>The ID to identify this skill in an external system.</description>
    <externalId>true</externalId>
    <inlineHelpText>The ID to identify this skill in an external system.</inlineHelpText>
    <label>External ID</label>
    <length>255</length>
    <type>Text</type>
</CustomField>