unpackaged/main/default/objects/pse__Skill__c/fields/pse__Group__c.field-meta.xml
<CustomField>
    <fullName>pse__Group__c</fullName>
    <description>Picklist of certification groups.</description>
    <inlineHelpText>Picklist of certification groups.</inlineHelpText>
    <label>Group</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Microsoft</fullName>
            </value>
            <value>
                <fullName>Java</fullName>
            </value>
            <value>
                <fullName>Salesforce.com</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>