unpackaged/main/default/objects/pse__Skill__c/fields/pse__Hierarchy_Key_Path__c.field-meta.xml
<CustomField>
    <fullName>pse__Hierarchy_Key_Path__c</fullName>
    <description>Path field for auto-generated concatenated ancestor IDs of the skill in the hierarchy.</description>
    <formula>IF(ISBLANK(
	        	pse__Parent_Category__r.pse__Parent_Category__r.pse__Parent_Category__r.pse__Parent_Category__r.pse__Parent_Category__r.pse__Parent_Category__r.pse__Parent_Category__r.pse__Parent_Category__r.pse__Parent_Category__c), "",
	        	pse__Parent_Category__r.pse__Parent_Category__r.pse__Parent_Category__r.pse__Parent_Category__r.pse__Parent_Category__r.pse__Parent_Category__r.pse__Parent_Category__r.pse__Parent_Category__r.pse__Parent_Category__c &amp; ",")
        	&amp;
        	IF(ISBLANK(
	        	pse__Parent_Category__r.pse__Parent_Category__r.pse__Parent_Category__r.pse__Parent_Category__r.pse__Parent_Category__r.pse__Parent_Category__r.pse__Parent_Category__r.pse__Parent_Category__c), "",
	        	pse__Parent_Category__r.pse__Parent_Category__r.pse__Parent_Category__r.pse__Parent_Category__r.pse__Parent_Category__r.pse__Parent_Category__r.pse__Parent_Category__r.pse__Parent_Category__c &amp; ",")
        	&amp;
        	IF(ISBLANK(
	        	pse__Parent_Category__r.pse__Parent_Category__r.pse__Parent_Category__r.pse__Parent_Category__r.pse__Parent_Category__r.pse__Parent_Category__r.pse__Parent_Category__c), "",
	        	pse__Parent_Category__r.pse__Parent_Category__r.pse__Parent_Category__r.pse__Parent_Category__r.pse__Parent_Category__r.pse__Parent_Category__r.pse__Parent_Category__c &amp; ",")
        	&amp;
        	IF(ISBLANK(
	        	pse__Parent_Category__r.pse__Parent_Category__r.pse__Parent_Category__r.pse__Parent_Category__r.pse__Parent_Category__r.pse__Parent_Category__c), "",
	        	pse__Parent_Category__r.pse__Parent_Category__r.pse__Parent_Category__r.pse__Parent_Category__r.pse__Parent_Category__r.pse__Parent_Category__c &amp; ",")
        	&amp;
        	IF(ISBLANK(
	        	pse__Parent_Category__r.pse__Parent_Category__r.pse__Parent_Category__r.pse__Parent_Category__r.pse__Parent_Category__c), "",
	        	pse__Parent_Category__r.pse__Parent_Category__r.pse__Parent_Category__r.pse__Parent_Category__r.pse__Parent_Category__c &amp; ",")
        	&amp;
        	IF(ISBLANK(
        		pse__Parent_Category__r.pse__Parent_Category__r.pse__Parent_Category__r.pse__Parent_Category__c), "",
        		pse__Parent_Category__r.pse__Parent_Category__r.pse__Parent_Category__r.pse__Parent_Category__c &amp; ",")
        	&amp;
        	IF(ISBLANK(
        		pse__Parent_Category__r.pse__Parent_Category__r.pse__Parent_Category__c), "",
        		pse__Parent_Category__r.pse__Parent_Category__r.pse__Parent_Category__c &amp; ",")
        	&amp;
        	IF(ISBLANK(
        		pse__Parent_Category__r.pse__Parent_Category__c), "",
        		pse__Parent_Category__r.pse__Parent_Category__c &amp; ",")
        	&amp;
        	IF(ISBLANK(pse__Parent_Category__c), "", pse__Parent_Category__c)</formula>
    <label>Hierarchy Key Path</label>
    <type>Text</type>
</CustomField>