unpackaged/main/default/objects/pse__Skill__c/fields/pse__Parent_Hierarchy_Level__c.field-meta.xml
<CustomField>
    <fullName>pse__Parent_Hierarchy_Level__c</fullName>
    <description>Indicates at which level in the skills hierarchy the parent of this skill resides.</description>
    <formula>IF ( ISBLANK ( pse__Parent_Category__c ), NULL, pse__Parent_Category__r.pse__Hierarchy_Level__c )</formula>
    <label>Parent Hierarchy Level</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>