unpackaged/main/default/objects/pse__Skill__c/fields/pse__Parent_Record_Type__c.field-meta.xml
<CustomField>
    <fullName>pse__Parent_Record_Type__c</fullName>
    <description>The parent record type for this skill.</description>
    <formula>pse__Parent_Category__r.RecordType.DeveloperName</formula>
    <label>Parent Record Type</label>
    <type>Text</type>
</CustomField>