unpackaged/main/default/objects/pse__Skill__c/fields/pse__Record_Type_Name__c.field-meta.xml
<CustomField>
    <fullName>pse__Record_Type_Name__c</fullName>
    <description>The record type name for this skill.</description>
    <formula>RecordType.DeveloperName</formula>
    <label>Record Type Name</label>
    <type>Text</type>
</CustomField>