unpackaged/main/default/objects/pse__Skill__c/fields/pse__Resource_Roles__c.field-meta.xml
<CustomField>
    <fullName>pse__Resource_Roles__c</fullName>
    <description>Resource roles associated with this skill. The picklist values available come from the Resource Role global picklist value set.</description>
    <inlineHelpText>Resource roles associated with this skill. The picklist values available come from the Resource Role global picklist value set.</inlineHelpText>
    <label>Resource Roles</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>pse__Resource_Role</valueSetName>
    </valueSet>
</CustomField>