unpackaged/main/default/objects/pse__Skill__c/fields/pse__Type__c.field-meta.xml
<CustomField>
    <fullName>pse__Type__c</fullName>
    <description>Set of skill types. Used when grouping skills capacity reports.</description>
    <inlineHelpText>Set of skill types. Used when grouping skills capacity reports.</inlineHelpText>
    <label>Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Business Analysis</fullName>
            </value>
            <value>
                <fullName>Data Management</fullName>
            </value>
            <value>
                <fullName>EDM</fullName>
            </value>
            <value>
                <fullName>EDM Warehouse</fullName>
            </value>
            <value>
                <fullName>Energy Domain</fullName>
            </value>
            <value>
                <fullName>FS Domain Knowledge</fullName>
            </value>
            <value>
                <fullName>General</fullName>
            </value>
            <value>
                <fullName>Industry</fullName>
            </value>
            <value>
                <fullName>Programming</fullName>
            </value>
            <value>
                <fullName>Project Management</fullName>
            </value>
            <value>
                <fullName>Project Manager</fullName>
            </value>
            <value>
                <fullName>PS Leadership</fullName>
            </value>
            <value>
                <fullName>Solution Architecture</fullName>
            </value>
            <value>
                <fullName>Strategy</fullName>
            </value>
            <value>
                <fullName>Technical</fullName>
            </value>
            <value>
                <fullName>Technical &amp; Architecture</fullName>
            </value>
            <value>
                <fullName>ThinkFolio</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>